--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,5 +1,5 @@
 FRONTEND_URL = https://scandify.vercel.app
-MONGODB_URI = mongodb+srv://RealEstate:RealEstate@realestate.n8dpbzv.mongodb.net/?retryWrites=true&w=majority&appName=RealEstate
+MONGODB_URI = mongodb+srv://RealEstate:RealEstate@realestate.n8dpbzv.mongodb.net/ScandiFans?retryWrites=true&w=majority&appName=RealEstate
 NODE_ENV = production
 PORT = 7000
 JWT_SECRET = SDFSEJDI342sdfsdf23423sdfDFSDE
