responsive whole site for now

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 FRONTEND_URL = http://localhost:3000
-# MONGODB_URI = mongodb://localhost:27017/
-MONGODB_URI = mongodb+srv://RealEstate:RealEstate@realestate.n8dpbzv.mongodb.net/ScandiFans?retryWrites=true&w=majority&appName=RealEstate
+MONGODB_URI = mongodb://localhost:27017/
+# MONGODB_URI = mongodb+srv://RealEstate:RealEstate@realestate.n8dpbzv.mongodb.net/ScandiFans?retryWrites=true&w=majority&appName=RealEstate
 NODE_ENV = development
 PORT = 7000
 JWT_SECRET = SDFSEJDI342sdfsdf23423sdfDFSDE
